<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorlayoutConfigurazioni"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:gravity="center_vertical|center_horizontal"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/indingo_100">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignParentTop="false"
        android:gravity="center_horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_conf_layout_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/indingo_900">

            <EditText
                android:id="@+id/input_text_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/configurazioni_ip" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_conf_layout_tcp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/indingo_900">

            <EditText
                android:id="@+id/input_text_tcp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/configurazioni_porta" />
        </android.support.design.widget.TextInputLayout>

        <com.rey.material.widget.CheckBox
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/configurazioni_ceckbox"
            android:id="@+id/autoApDateDB"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:textAlignment="center"
            app:cbd_tickColor="@color/indingo_900"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/idAndroid"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/Button"
            android:background="@drawable/round_button"
            android:id="@+id/btn_conf_registra"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/configurazioni_registra"
            android:textStyle="bold" />

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <Button
            style="@style/Button"
            android:background="@drawable/round_button"
            android:id="@+id/btn_conf_salva"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:text="@string/configurazioni_salva"
            android:textStyle="bold"/>

        <Button
            style="@style/Button"
            android:background="@drawable/round_button"
            android:id="@+id/btn_conf_chiudi"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="@string/configurazioni_chiudi"
            android:textStyle="bold"/>

    </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
