<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:elevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:padding="8dp"
                android:text="Home"
                android:textColor="#222"
                android:textStyle="bold"
                android:textSize="22dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                style="@style/Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_login"
                android:id="@+id/main_button_login"
                android:layout_alignParentTop="false"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:layout_below="@+id/title"
                android:onClick="click_login" />

            <Button
                style="@style/Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_conf"
                android:id="@+id/main_button_conf"
                android:layout_below="@+id/main_button_login"
                android:layout_alignParentStart="true"
                android:textStyle="bold" />

            <Button
                style="@style/Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_sinc"
                android:id="@+id/main_button_sinc"
                android:layout_below="@+id/main_button_conf"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:id="@+id/imageView"
        android:src="@drawable/esterno"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:text="@string/copy"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

</RelativeLayout>
